# cpp-capstone

./: CMakeLists.txt  README.txt
src/: ai.cpp  ai.h  board.cpp  board.h  cell.cpp  cell.h  color.cpp  color.h  game.cpp  game.h  game_state.cpp  game_state.h  globals.h  input_controller.cpp  input_controller.h  main.cpp  move_matrix.h  piece.cpp  piece.h  piece_bishop.cpp  piece_bishop.h  piece_king.cpp  piece_king.h  piece_knight.cpp  piece_knight.h  piece_pawn.cpp  piece_pawn.h  piece_queen.cpp  piece_queen.h  piece_rook.cpp  piece_rook.h  piece_type.cpp  piece_type.h  piece_types.h  relation_matrix.h  renderer.cpp  renderer.h  sprite.cpp  sprite.h
